# RandD

./: .env.example  .gitignore  DESIGN.md  README.md  gmail_auth.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
.kilo/plans/: 1783573645739-tenant-google-connect.md
backend/: .env.example  README.md  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  _vendor.py  agent.py  agentcore_browser.py  browser_camera.py  camera_control.py  capture_tools.py  inventory_tools.py  io.py  kb_archive.py  main.py  migrate_runtime.py  perplexity_agent.py  prompts.py  properties.py  qc_journal.py  report_db.py  slack_report.py  smarty_mcp.py  take_video.py  tool_libraries.py  transcribe.py  vision_tools.py  walkthrough_videos.py
backend/migrations/: 0006_dah_126_auth_function_rls_fix.sql  0007_live_home_onboarding.sql
backend/tests/: __init__.py  conftest.py  helpers.py  test_agentcore_browser.py  test_auth.py  test_bidi_dynamic_tools.py  test_dah_124_schema_reconciliation.py  test_inventory_agent_tools.py  test_live_home_onboarding_domain.py  test_live_home_onboarding_pg_repository.py  test_migration.py  (+6 more)
docs/: frontend_prompt.md
examples/: manual_lifecycle.py  text_chat.py  voice_assistant.py  websocket_server.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: clean-ports.sh  deploy_ec2.py  run-backend.sh  run-frontend.sh  setup_remote_ec2.sh  sync-ai-elements.sh
sql/: 0003_multitenancy.sql
tests/: test_smoke.py
(+70 files in other folders)
